--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Easy Pomodoro</title>
   </head>
   <body>
+    <script>0</script>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <!-- kfds -->
