--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <script>0</script>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- kfds -->
     <!--
